<resources>
    <string name="app_name">Customer label creator</string>
    <string name="action_settings">Settings</string>
    <string name="customer_fragment_title">Contact information</string>
    <string name="customer_name_label">Name</string>
    <string name="customer_contact_label">Phone/ Email/ Customer ID</string>
    <string name="customer_paystatus_label">Already payed?</string>
    <string name="customer_pickup_label">Pickup Date</string>
    <string name="customer_notes_label">Extra Notes</string>
    <string name="button_receipt">Add receipt</string>
    <string name="customer_pickupTime_label">Time</string>
    <string name="add_products_label">Add New Product</string>
    <string name="delete_product_label">Delete Product</string>
    <string name="payment_fragment_title">Hello blank fragment</string>
    <string name="next_button_text">Next</string>
    <string name="previous_button_text">Previous</string>
    <string name="product_fragment_title">Products sold</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="more_info">More info</string>
    <string name="preview_of_receipt">Preview of receipt</string>
</resources>